added map and player sprite

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "platformer test",
+  "name": "platformer-test",
   "version": "1.0.9",
   "description": "A Phaser 3 Platformer project test",
   "main": "src/index.js",
   "scripts": {
     "build": "webpack",
-    "start": "npm run build && webpack-dev-server --port=8000"
+    "start": "npm run build && webpack-dev-server --watch"
   },
   "repository": {
     "type": "git",
